--- a/homework1/index.css
+++ b/homework1/index.css
@@ -1,131 +1,446 @@
-body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
+/*mobile*/
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&display=swap');
+@media (min-width:320px) {
+    body {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+    }
+    p , a , h3 , h5 , li {
+        font-family:  'Baloo 2';
+    }
+
+    .header_container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 20px 20px 14px 20px;
+    }
+
+    .header_logo {
+        width: 145px;
+        height: 60px;
+    }
+
+    /*BURGEr*/
+    #toggle {
+        display: none;
+    }
+
+   
+    .hamburger {
+        position: absolute;
+        top: 5em;
+        right: 5%;
+        margin-left: -2em;
+        margin-top: -45px;
+        width: 2em;
+        height: 45px;
+        z-index: 5;
+    }
+
+    .hamburger div {
+        position: relative;
+        width: 3em;
+        height: 7px;
+        border-radius: 3px;
+        background: rgba(0, 0, 0, 0.77);
+        margin-top: 8px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    /**
+  Nav Styles
+  **/
+    .nav {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color:   #59ABB0;;
+        top: -100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        overflow: hidden;
+        transition: all 0.3s ease-in-out;
+        transform: scale(0);
+    }
+
+    .nav-wrapper {
+        position: relative;
+        overflow: hidden;
+        overflow-y: auto;
+        height: 100%;
+    }
+
+    nav {
+        text-align: left;
+        margin-left: 25%;
+    }
+
+   .burger_menu_bttn {
+        position: relative;
+        text-decoration: none;
+        color: black;
+        font-size: 2em;
+        display: inline-block;
+        margin-top: 1.25em;
+        transition: color 0.2s ease-in-out;
+        letter-spacing: 1px;
+    }
+
+    .burger_menu_bttn:before {
+        content: '';
+        height: 0;
+        position: absolute;
+        width: 0.25em;
+        background-color: white;
+        left: -0.5em;
+        transition: all 0.2s ease-in-out;
+    }
+
+    .burger_menu_bttn:hover {
+        color: white;
+    }
+
+    .burger_menu_bttn:hover:before {
+        height: 100%;
+    }
+
+    /**
+  Animations
+  **/
+    #toggle:checked+.hamburger .top-bun {
+        transform: rotate(-45deg);
+        margin-top: 25px;
+    }
+
+    #toggle:checked+.hamburger .bottom-bun {
+        opacity: 0;
+        transform: rotate(45deg);
+    }
+
+    #toggle:checked+.hamburger .meat {
+        transform: rotate(45deg);
+        margin-top: -7px;
+    }
+
+    #toggle:checked+.hamburger+.nav {
+        top: 0;
+        transform: scale(1);
+    }
+
+    /*BURGER*/
+    .nav_menu {
+        display: none;
+        flex-direction: row;
+        list-style: none;
+    }
+
+    .nav_menu li {
+        margin-right: 24px;
+        text-decoration: none;
+    }
+
+    .nav_menu_bttn {
+        text-decoration: none;
+        color: black
+    }
+
+    .nav_menu_apply_button {
+        padding: 18px 60px;
+        background: #59ABB0;
+        border-radius: 10px;
+        font-size: 16px;
+        color: white;
+        text-decoration: none;
+    }
+
+    .top_section {
+        display: flex;
+        flex-direction: column;
+        margin: 0 20px 47px 20px;
+    }
+
+    .top_section_text_content {
+        margin: auto;
+        width: 90%;
+        margin-bottom: 24px;
+    }
+
+    .top_section_title {
+        font-size: 36px;
+    }
+
+    .top_section_text {
+        font-size: 16px;
+    }
+
+    .top_section_content {
+        padding-top: 80px;
+    }
+
+    .top_section_text_list {
+        margin-bottom: 40px;
+    }
+
+    .apply_button {
+        display: flex;
+        padding: 10px 60px;
+        background: #59ABB0;
+        border-radius: 10px;
+        color: white;
+        font-size: 18px;
+        margin-top: 40px;
+        justify-content: center;
+        align-self: center;
+        margin: auto;
+
+    }
+
+    .top_section_image {
+        width: 100%;
+        height: auto;
+    }
+
+    .bottom_section {
+        display: flex;
+        flex-direction: column;
+        margin: 0 20px 95px 20px;
+    }
+
+    .bottom_section_content_text {
+        margin: auto;
+
+    }
+
+    .bottom_section_text {
+        padding-bottom: 18px;
+        margin: auto;
+    }
+
+    .bottom_section_button {
+        display: flex;
+        justify-content: center;
+        padding: 10px 100px;
+        background: #59ABB0;
+        border-radius: 10px;
+        text-decoration: none;
+        color: white;
+
+    }
+
+    .bottom_section_image {
+        width: 100%;
+        height: auto;
+    }
+
+    .footer_container {
+        background: #59ABB0;
+        padding: 39px 20px;
+    }
+
+    .footer_content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .footer_text {
+        color: white;
+        font-size: 14px;
+    }
+
+    .footer_menu {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+    }
+
+    .footer_menu_bttn {
+        margin-right: 20px;
+        font-size: 14px;
+        color: white;
+        text-decoration: none;
+    }
 }
 
-.header_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 62px 100px 44px 100px;
-}
 
-.header_logo {
-    width: 145px;
-    height: 60px;
-}
+/*desktop*/
 
-.nav_menu {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-}
 
-.nav_menu li {
-    margin-right: 24px;
-    text-decoration: none;
-}
-.nav_menu_bttn{
-    text-decoration: none;
-    color:black
-}
 
-.nav_menu_apply_button {
-    padding: 18px 60px;
-    background: #59ABB0;
-    border-radius: 10px;
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
-}
+@media (min-width:801px) {
+    body {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+    }
 
-.top_section {
-    display: flex;
-    flex-direction: row;
-    margin: 0 100px 47px 100px;
-}
+    .hamburger {
+        display: none;
+    }
 
-.top_section_text_content {
-    margin-right: 170px;
-    width: 705px;
-    height: 716px;
-}
+    .header_container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 62px 100px 44px 100px;
+    }
 
-.top_section_title {
-    font-size: 36px;
-}
+    .header_logo {
+        width: 145px;
+        height: 60px;
+    }
 
-.top_section_text {
-    font-size: 16px;
-}
 
-.top_section_content {
-    padding-top: 80px;
-}
 
-.top_section_text_list {
-    margin-bottom: 40px;
-}
+    .nav_menu {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        
+        align-items: center;
+    }
 
-.apply_button {
-    padding: 10px 120px;
-    background: #59ABB0;
-    border-radius: 10px;
-    color: white;
-    font-size: 18px;
-    margin-top: 40px;
-}
+    .nav_menu li {
+        margin-right: 24px;
+        text-decoration: none;
+        
+    }
 
-.top_section_image {
-    width: 843px;
-    height: 716px;
-}
+    .nav_menu_bttn {
+        text-decoration: none;
+        color: black;
+        
 
-.bottom_section {
-    display: flex;
-    flex-direction: row;
-    margin: 0 100px 95px 100px;
-}
+        font-size: 16px;
+    }
 
-.bottom_section_content_text {
-    margin-left: 145px;
-    padding-top: 125px;
-}
-.bottom_section_text{
-    padding-bottom: 18px;
-}
+    .nav_menu_bttn:hover {
+        
+        font-weight: bolder;
 
-.bottom_section_button {
-    padding: 10px 120px;
-    background: #59ABB0;
-    border-radius: 10px;
-    text-decoration: none;
-    color:white;
-}
+        transition:0.5s;
+        color: black;
+    }
 
-.footer_container {
-    background: #59ABB0;
-    padding: 39px 100px;
-}
-.footer_content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.footer_text{
-    color:white;
-    font-size: 14px;
-}
-.footer_menu{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-}
-.footer_menu_bttn{
-    margin-right: 20px;
-    font-size: 14px;
-    color:white;
-    text-decoration: none;
+    .nav_menu_apply_button {
+        padding: 18px 60px;
+        background: #59ABB0;
+        border-radius: 10px;
+        font-size: 16px;
+        color: white;
+        text-decoration: none;
+        
+    }
+
+    .nav_menu_apply_button:hover {
+        background: #60DFE8;
+        transition: 0.5s;
+    }
+
+    .top_section {
+        display: flex;
+        flex-direction: row;
+        margin: 0 100px 47px 100px;
+    }
+
+    .top_section_text_content {
+        margin-right: 170px;
+        width: 705px;
+        height: 716px;
+    }
+
+    .top_section_title {
+        font-size: 36px;
+    }
+
+    .top_section_text {
+        font-size: 16px;
+    }
+
+    .top_section_content {
+        padding-top: 80px;
+    }
+
+    .top_section_text_list {
+        margin-bottom: 40px;
+    }
+
+    .apply_button {
+        padding: 10px 120px;
+        background: #59ABB0;
+        border-radius: 10px;
+        color: white;
+        font-size: 18px;
+        margin-top: 40px;
+    }
+    .apply_button:hover{
+        background: #60DFE8;
+        transition: 0.5s;
+    }
+
+    .top_section_image {
+        max-width: 843px;
+        height: auto;
+    }
+
+    .bottom_section {
+        display: flex;
+        flex-direction: row;
+        margin: 0 100px 95px 100px;
+    }
+
+    .bottom_section_content_text {
+        margin-left: 145px;
+        padding-top: 125px;
+    }
+
+    .bottom_section_text {
+        padding-bottom: 18px;
+    }
+
+    .bottom_section_button {
+        padding: 10px 120px;
+        background: #59ABB0;
+        border-radius: 10px;
+        text-decoration: none;
+        color: white;
+    }
+    .bottom_section_button:hover{
+        background: #60DFE8;
+        transition: 0.5s;
+    }
+
+    .footer_container {
+        background: #59ABB0;
+        padding: 39px 100px;
+    }
+
+    .footer_content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .footer_text {
+        color: white;
+        font-size: 14px;
+    }
+
+    .footer_menu {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+    }
+
+    .footer_menu_bttn {
+        margin-right: 20px;
+        font-size: 14px;
+        color: white;
+        text-decoration: none;
+    }
 }
