--- a/homework1/index.css
+++ b/homework1/index.css
@@ -29,11 +29,8 @@
 
    
     .hamburger {
-        position: absolute;
-        top: 5em;
-        right: 5%;
-        margin-left: -2em;
-        margin-top: -45px;
+        
+        margin-right: 20px;
         width: 2em;
         height: 45px;
         z-index: 5;
