--- a/homework9/src/Pages/Components/CoursesMain/courses.css
+++ b/homework9/src/Pages/Components/CoursesMain/courses.css
@@ -1,17 +1,64 @@
-.courses-container{
+.courses-container {
     display: flex;
     flex-direction: column;
     margin: 47px 135px 28px 135px;
 }
-.name-and-price{
+
+.courses-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+.name-and-price {
     display: flex;
     justify-content: space-between;
 }
-.course-content{
+
+.course-content {
+    display: flex;
     max-width: 280px;
     max-height: 372px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px #93A3A3;
+    border-radius: 15px;
+    margin: auto;
 }
-.course-level{
+
+.course-info {
+    margin: 12px;
+}
+
+.course-level {
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
+}
+
+.course-duration {
+    display: flex;
+    justify-content: space-between;
+}
+
+.course-duration div {
+    text-align: right;
+}
+
+.course-apply-button {
+    font-family: 'Baloo 2';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    /* Primary / White */
+
+    color: #FFFFFF;
+    background: #59ABB0;
+    border-radius: 10px;
+    padding: 9px 109px 9px 109px;
+    border: none;
 }
