--- a/homework9/src/Pages/Components/CoursesMain/courses.css
+++ b/homework9/src/Pages/Components/CoursesMain/courses.css
@@ -1,13 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 .courses-container {
     display: flex;
+
     flex-direction: column;
     margin: 47px 135px 28px 135px;
 }
 
+.courses-title {
+    margin-bottom: 20px;
+    font-family: 'Baloo 2';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+}
+
 .courses-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
+    column-gap: 82px;
 }
 
 .name-and-price {
@@ -15,18 +31,63 @@
     justify-content: space-between;
 }
 
+.course-price {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    color: #1B6C71;
+}
+
 .course-content {
     display: flex;
-    max-width: 280px;
-    max-height: 372px;
+    width: 280px;
+    min-height: 372px;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px #93A3A3;
     border-radius: 15px;
-    margin: auto;
+    border-collapse: separate;
+    overflow: hidden;
+
+    margin-bottom: 28px;
+
 }
+
+.course-content:hover {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px #93A3A3;
+    border-radius: 15px;
+}
+
+.course-title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+
+    color: #000000;
+}
+
 
 .course-info {
     margin: 12px;
+}
+
+.level-duration {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 120%;
+    text-align: right;
+    color: #000000;
 }
 
 .course-level {
@@ -35,17 +96,46 @@
     margin-top: 30px;
 }
 
+
 .course-duration {
     display: flex;
     justify-content: space-between;
+    margin-top: 8px;
+}
+
+span {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 120%;
+    display: flex;
+    align-items: center;
+    color: #4F5D5D;
 }
 
 .course-duration div {
     text-align: right;
 }
 
+.course-description {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 16px;
+    /* or 133% */
+
+    display: flex;
+    align-items: center;
+
+    color: #000000;
+    margin: 10px 0 16px 0;
+
+}
+
 .course-apply-button {
-    font-family: 'Baloo 2';
+    font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
@@ -61,4 +151,9 @@
     border-radius: 10px;
     padding: 9px 109px 9px 109px;
     border: none;
+}
+
+.course-apply-button:hover {
+    background: #1B6C71;
+    box-shadow: 0px 0px 4px #59ABB0;
 }
