--- a/homework9/src/index.css
+++ b/homework9/src/index.css
@@ -197,6 +197,7 @@
         align-self: center;
         margin: auto;
         text-decoration: none;
+        border: none;
     }
 
     .apply-link {
@@ -398,6 +399,7 @@
         font-size: 16px;
         color: white;
         text-decoration: none;
+        border: none;
     }
 
     .nav_menu_apply_button:hover {
@@ -448,6 +450,7 @@
         font-size: 18px;
         margin-top: 40px;
         text-decoration: none;
+        border:none;
     }
 
     .apply-link {
