--- a/homework9/src/index.css
+++ b/homework9/src/index.css
@@ -198,6 +198,7 @@
         margin: auto;
         text-decoration: none;
         border: none;
+        width: 100%;
     }
 
     .apply-link {
@@ -252,6 +253,18 @@
         border-radius: 10px;
         text-decoration: none;
         color: white;
+        width: 100%;
+        border: none;
+        font-family: 'Baloo 2';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 26px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #FFFFFF;
+        border: none;
     }
 
     .bottom_section_button:active {
@@ -514,6 +527,7 @@
         align-items: center;
         text-align: center;
         color: #FFFFFF;
+        border: none;
     }
 
     .bottom_section_button:hover {
