--- a/homework9/src/Pages/Apply/apply.css
+++ b/homework9/src/Pages/Apply/apply.css
@@ -58,6 +58,21 @@
     min-width: 144px;
 }
 
+select {
+    background-color: white;
+    border: thin solid blue;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1.5em;
+    padding: 0.5em 3.5em 0.5em 1em;
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
 
 .form-row-select {
     min-width: 295px;
@@ -71,11 +86,20 @@
     line-height: 20px;
     color: #000000;
     background: #FFFFFF;
-    /* Main 4 Shades / Main 43 */
-
     border: 1px solid #C2D2D2;
     border-radius: 10px;
     padding: 10px 100px 10px 16px;
+    background-image:
+        linear-gradient(45deg, transparent 50%, gray 50%),
+        linear-gradient(135deg, gray 50%, transparent 50%);
+    background-position:
+        calc(100% - 20px) calc(1em + 2px),
+        calc(100% - 15px) calc(1em + 2px);
+    background-size:
+        5px 5px,
+        5px 5px,
+        1px 1.5em;
+    background-repeat: no-repeat;
 }
 
 .inputs {
@@ -155,7 +179,6 @@
     text-align: center;
     color: #1B6C71;
     padding: 9px 33px 9px 33px;
-
 }
 
 .applied-link {
