--- a/homework9/src/Pages/Apply/apply.css
+++ b/homework9/src/Pages/Apply/apply.css
@@ -56,6 +56,7 @@
 
 .form-row span {
     min-width: 144px;
+    margin-right: 8px;
 }
 
 select {
@@ -72,34 +73,6 @@ select {
     box-sizing: border-box;
     -webkit-appearance: none;
     -moz-appearance: none;
-}
-
-.form-row-select {
-    min-width: 295px;
-    background: #FFFFFF;
-    border-radius: 10px;
-    margin-left: 8px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: #000000;
-    background: #FFFFFF;
-    border: 1px solid #C2D2D2;
-    border-radius: 10px;
-    padding: 10px 100px 10px 16px;
-    background-image:
-        linear-gradient(45deg, transparent 50%, gray 50%),
-        linear-gradient(135deg, gray 50%, transparent 50%);
-    background-position:
-        calc(100% - 20px) calc(1em + 2px),
-        calc(100% - 15px) calc(1em + 2px);
-    background-size:
-        5px 5px,
-        5px 5px,
-        1px 1.5em;
-    background-repeat: no-repeat;
 }
 
 .inputs {
