--- a/homework9/src/Pages/Components/CoursesMain/courses.css
+++ b/homework9/src/Pages/Components/CoursesMain/courses.css
@@ -21,8 +21,8 @@
 .courses-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 145px;
     align-items: center;
-    column-gap: 82px;
 }
 
 .name-and-price {
@@ -44,13 +44,16 @@
 
 .course-content {
     display: flex;
-    width: 280px;
+    min-width: 280px;
+    max-width: 280px;
     min-height: 372px;
+    max-height: 372px;
     background: #FFFFFF;
     box-shadow: 0px 0px 4px #93A3A3;
     border-radius: 15px;
     border-collapse: separate;
     overflow: hidden;
+    margin: auto;
     margin-bottom: 28px;
 }
 
@@ -60,7 +63,7 @@
     border-radius: 15px;
 }
 
-.course-title {
+.course-name {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
@@ -72,7 +75,18 @@
 }
 
 .course-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 12px;
+    min-height: 190px;
+}
+
+.course-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 8px;
 }
 
 .level-duration {
@@ -88,7 +102,6 @@
 .course-level {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
 }
 
 
